# ComfyUI-LoRA-Optimizer

./: .gitignore  README.md  __init__.py  lora_optimizer.py  pyproject.toml  zimage_lora_merger.py
docs/maintainers/: upstream-sync-correctness-pr.md
docs/plans/: 2026-03-02-per-prefix-adaptive-merge-design.md  2026-03-02-per-prefix-adaptive-merge.md  2026-03-03-architecture-aware-normalization-design.md  2026-03-04-base-model-filter-design.md  2026-03-04-conflict-editor-design.md  2026-03-04-conflict-editor.md  2026-03-04-wanvideo-lora-optimizer-design.md  2026-03-04-wanvideo-lora-optimizer.md  2026-03-05-lora-autotuner-design.md  2026-03-05-lora-autotuner.md  2026-03-06-diff-cache.md  2026-03-10-autotuner-sub-merge-design.md  2026-03-10-autotuner-sub-merge.md  2026-03-31-lora-extract-from-model-design.md  2026-03-31-lora-extract-from-model.md  2026-04-02-analysis-cache-design.md  2026-04-02-analysis-cache.md  2026-04-09-autotuner-speed-optimizations.md  2026-04-09-dynamic-stacker-ux-design.md  2026-04-09-dynamic-stacker-ux.md  2026-06-22-style-preserving-merge-design.md
docs/research/: 2026-06-11-math-validation.md
docs/wiki/: Configuration-Guide.md  Home.md  How-It-Works.md  Merge-Algorithms.md  Nodes.md  Tips-and-Troubleshooting.md
example_workflows/: LoRa Optimizer-1.4.json  LoRa Optimizer-1.7.json
js/: lora_compatibility_analyzer.js  lora_merge_settings.js  lora_optimizer_bridge.js  lora_stack_dynamic.js
tests/: test_lora_optimizer.py  test_per_prefix_capture.py
