[project]
name = "comfyui-lora-optimizer"
description = "Auto-optimizer nodes for combining multiple LoRAs via diff-based merging with TIES conflict resolution. Supports standard LoRA stacks and WanVideo LoRAs."
version = "1.0.2"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ethanfel/ComfyUI-LoRA-Optimizer"

[tool.comfy]
PublisherId = "ethanfel"
DisplayName = "LoRA Optimizer"
Icon = "https://raw.githubusercontent.com/ethanfel/ComfyUI-LoRA-Optimizer/main/assets/banner.svg"
